...
            if (uiState.value.isLoading) {
                CircularProgressIndicator()
            } else if (uiState.value.errorMessage != null) {
                Text(text = uiState.value.errorMessage!!)
            } else {
                val item = uiState.value.listing!!
                Box(modifier = Modifier.fillMaxWidth().height(400.dp).testTag("details_header")) {
                    item.images?.takeIf { it.isNotEmpty() }?.let {
                        AsyncImage(
                            modifier = Modifier.fillMaxSize(),
                            model = it.first(),
                            contentDescription = "Travel Image",
                            contentScale = ContentScale.Crop
...
                }
            }
            Button(
                onClick = {
                    backStack.add(NavRoutes.Checkout(itemId))
                },
                modifier = Modifier.fillMaxWidth().padding(16.dp).testTag("book_now_button"),
                shape = RoundedCornerShape(12.dp)
            ) {
                Text("Book Now", modifier = Modifier.padding(vertical = 8.dp))
            }
        }
    }
...
