...
    isSelected: String,
    onItemSelected: (String) -> Unit
) {

    Card(
        modifier = Modifier.fillMaxWidth().clip(RoundedCornerShape(16.dp))
            .padding(16.dp).testTag("trip_dates_card"),
        colors = CardDefaults.cardColors(containerColor = MaterialTheme.colorScheme.onSecondary),
        elevation = CardDefaults.cardElevation(4.dp)
    ) {
        Column(modifier = Modifier.padding(16.dp)) {
            Text(
                text = "Select Trip Dates",
...
